<resources>
    <string name="app_name">HOCH</string>
    <string name="category">Category : </string>
    <string name="recommend">Recommend : </string>
    <string name="khmerFood">Khmer Food</string>
    <string name="chineseFood">Chinese Food</string>
    <string name="europeFood">Europe Food</string>
    <string name="drink">Drink</string>
    <string name="login">Login</string>
    <string name="name">Username</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="password">Password</string>
    <string name="confrimPassword">Confirm Password</string>
    <string name="donnothaveaccount">Don\'t you have an account?</string>
    <string name="singUp"><u>Sign Up</u></string>
    <string name="signUpNoU">Sign Up</string>
    <string-array name="genderForSelect">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="order">Order</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="seatN">Seat Nº</string>
    <string name="comment">Comment : </string>
    <string name="orderNow">Order Now</string>
    <string name="detail">Detail</string>
    <string name="size">Size</string>
    <string name="smallDish">Small Dish</string>
    <string name="bigDish">Big Dish</string>
    <string name="quantity">Quantity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="orderList">Order List</string>
    <string name="fried">Fried</string>
    <string name="soup">Soup</string>
    <string name="dessert">Dessert</string>
    <string name="ok">:</string>
    <string name="done">Done</string>
    <string name="orderSuccess">Order Successfully</string>
    <string name="pref_file">com.example.preference_file</string>
    <string name="pref_login_status">com.example.preference_login_status</string>
    <string name="pref_user_name">com.example.preference_user_name</string>
    <string name="example">Example</string>
</resources>
