<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginAndRegister">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="187dp"
        android:layout_height="187dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="110dp"
        android:layout_marginTop="26dp"
        app:srcCompat="@drawable/app_logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="214dp"
        android:layout_marginEnd="146dp"
        android:text="@string/login"
        style="@style/text48SP" />

    <LinearLayout
        android:layout_width="342dp"
        android:layout_height="212dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="289dp"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/textView5"
            style="@style/textSize18ColorBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/name" />

        <EditText
            android:id="@+id/editText6"
            style="@style/textSize18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/example"/>

        <TextView
            android:id="@+id/textView7"
            style="@style/textSize18ColorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/editText7"
            style="@style/textSize18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="********"
            android:inputType="textPassword" />


    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="108dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="71dp"
        android:background="@drawable/radious_green"
        android:text="@string/login"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="40dp"
        android:text="@string/donnothaveaccount"
        android:textColor="#000" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="40dp"
        android:text="@string/singUp"
        android:textColor="#000" />
</RelativeLayout>