<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderInput">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:backgroundTint="@color/appColorGreen"/>

    <TextView
        style="@style/textHomePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/toolbarOrder"
        android:layout_centerInParent="true"
        android:layout_marginTop="11dp"
        android:text="@string/order" />


    <LinearLayout
        android:id="@+id/linerLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarOrder"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-1dp"
        android:layout_marginBottom="0dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            style="@style/marginTop15dp"/>

        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:ems="10"
            android:inputType="textPersonName"
            style="@style/marginTop15dp"
            android:hint="" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Time"
            style="@style/marginTop15dp"/>

        <EditText
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            android:background="@drawable/border"
            style="@style/marginTop15dp"
            android:hint="" />
        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phoneNumber"
            style="@style/marginTop15dp"/>

        <EditText
            android:id="@+id/phoneNumberInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:background="@drawable/border"
            style="@style/marginTop15dp"
            android:hint="" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seatN"
            style="@style/marginTop15dp"/>

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:background="@drawable/border"
            style="@style/marginTop15dp"
            android:hint="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/marginTop15dp">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/textSize18ColorBlack"
                android:text="@string/comment" />

            <EditText
                android:layout_marginTop="15dp"
                android:id="@+id/editText8"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:background="@drawable/border"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:gravity="top"
                android:text="" />
        </LinearLayout>

        <Button
            android:layout_marginTop="15dp"
            android:id="@+id/btnOrderNow"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/radious_green"
            android:text="@string/orderNow"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</RelativeLayout>