<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Food_Detail">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:backgroundTint="@color/appColorGreen"/>

    <TextView
        style="@style/textHomePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/toolbarDetail"
        android:layout_centerInParent="true"
        android:layout_marginTop="11dp"
        android:text="@string/detail" />

    <RelativeLayout
        android:id="@+id/relativeFragmentDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarDetail"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="TODO"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/right_home_screen_1" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="359dp"
        android:layout_height="401dp"
        android:layout_below="@+id/relativeFragmentDetail"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="74dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            style="@style/text30SP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView9"
            style="@style/textSize18ColorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="size" />

        <LinearLayout
            style="@style/marginTop15dp"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSmallDish"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="@drawable/radious_blue"
                android:gravity="center"
                android:text="@string/smallDish"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/buttonBigDish"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@drawable/radious_green"
                android:gravity="center"
                android:text="@string/bigDish"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <RelativeLayout
            style="@style/marginTop15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView13"
                style="@style/textSize18ColorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/quantity" />

            <ImageButton
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="259dp"
                android:layout_marginTop="0dp"
                android:background="@null"
                app:srcCompat="@drawable/ic_minus" />

            <TextView
                android:id="@+id/value"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="48dp"
                android:gravity="center_horizontal"
                android:text="1" />

            <ImageButton
                android:id="@+id/btnPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="18dp"
                android:background="@null"
                app:srcCompat="@drawable/ic_plus" />
        </RelativeLayout>

        <LinearLayout
            style="@style/marginTop15dp"
            android:layout_width="match_parent"
            android:layout_height="142dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                style="@style/textSize18ColorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/comment" />

            <EditText
                android:id="@+id/editText8"
                style="@style/marginTop15dp"
                android:layout_width="wrap_content"
                android:layout_height="94dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:ems="10"
                android:gravity="top"
                android:inputType="textPersonName"
                android:text="" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnAddToCard"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="106dp"
        android:layout_marginTop="96dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/radious_green"
        android:text="Add to Cart"
        android:textColor="@color/colorWhite" />

</RelativeLayout>